include/dss_capi.h

    /*! 
    Array of strings containing all Load names
    */
    DSS_CAPI_DLL void Loads_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Set first Load element to be active; returns 0 if none.
    */
    DSS_CAPI_DLL int32_t Loads_Get_First(void);
    DSS_CAPI_DLL int32_t Loads_Get_idx(void);
    /*! 
    Set active load by name.
    */
    DSS_CAPI_DLL const char* Loads_Get_Name(void);
    /*! 
    Sets next Load element to be active; returns 0 of none else index of active load.
    */
    DSS_CAPI_DLL int32_t Loads_Get_Next(void);
    DSS_CAPI_DLL void Loads_Set_idx(int32_t Value);
    /*! 
    Set active load by name.
    */
    DSS_CAPI_DLL void Loads_Set_Name(const char* Value);
    /*! 
    Set kV rating for active Load. For 2 or more phases set Line-Line kV. Else actual kV across terminals.
    */
    DSS_CAPI_DLL double Loads_Get_kV(void);
    /*! 
    Set kvar for active Load. Updates PF based in present kW.
    */
    DSS_CAPI_DLL double Loads_Get_kvar(void);
    /*! 
    Set kW for active Load. Updates kvar based on present PF.
    */
    DSS_CAPI_DLL double Loads_Get_kW(void);
    /*! 
    Set Power Factor for Active Load. Specify leading PF as negative. Updates kvar based on kW value
    */
    DSS_CAPI_DLL double Loads_Get_PF(void);
    /*! 
    Set kV rating for active Load. For 2 or more phases set Line-Line kV. Else actual kV across terminals.
    */
    DSS_CAPI_DLL void Loads_Set_kV(double Value);
    /*! 
    Set kvar for active Load. Updates PF based on present kW.
    */
    DSS_CAPI_DLL void Loads_Set_kvar(double Value);
    /*! 
    Set kW for active Load. Updates kvar based on present PF.
    */
    DSS_CAPI_DLL void Loads_Set_kW(double Value);
    /*! 
    Set Power Factor for Active Load. Specify leading PF as negative. Updates kvar based on present value of kW.
    */
    DSS_CAPI_DLL void Loads_Set_PF(double Value);
    /*! 
    Number of Load objects in active circuit.
    */
    DSS_CAPI_DLL int32_t Loads_Get_Count(void);
    /*! 
    Factor for allocating loads by connected xfkva
    */
    DSS_CAPI_DLL double Loads_Get_AllocationFactor(void);
    /*! 
    Factor relates average to peak kw.  Used for allocation with kwh and kwhdays/
    */
    DSS_CAPI_DLL double Loads_Get_Cfactor(void);
    DSS_CAPI_DLL int32_t Loads_Get_Class_(void);
    /*! 
    Name of a loadshape with both Mult and Qmult, for CVR factors as a function of time.
    */
    DSS_CAPI_DLL const char* Loads_Get_CVRcurve(void);
    /*! 
    Percent reduction in Q for percent reduction in V. Must be used with LoadModelCVR.
    */
    DSS_CAPI_DLL double Loads_Get_CVRvars(void);
    /*! 
    Percent reduction in P for percent reduction in V. Must be used with LoadModelCVR.
    */
    DSS_CAPI_DLL double Loads_Get_CVRwatts(void);
    /*! 
    Name of the loadshape for a daily load profile.
    */
    DSS_CAPI_DLL const char* Loads_Get_daily(void);
    /*! 
    Name of the loadshape for a duty cycle simulation.
    */
    DSS_CAPI_DLL const char* Loads_Get_duty(void);
    /*! 
    Name of the growthshape curve for yearly load growth factors.
    */
    DSS_CAPI_DLL const char* Loads_Get_Growth(void);
    /*! 
    Delta loads are connected line-to-line.
    */
    DSS_CAPI_DLL uint16_t Loads_Get_IsDelta(void);
    /*! 
    Base load kva. Also defined kw and kvar or pf input, or load allocation by kwh or xfkva.
    */
    DSS_CAPI_DLL double Loads_Get_kva(void);
    /*! 
    kwh billed for this period. Can be used with Cfactor for load allocation.
    */
    DSS_CAPI_DLL double Loads_Get_kwh(void);
    /*! 
    Length of kwh billing period for average demand calculation. Default 30.
    */
    DSS_CAPI_DLL double Loads_Get_kwhdays(void);
    /*! 
    The Load Model defines variation of P and Q with voltage.
    */
    DSS_CAPI_DLL int32_t Loads_Get_Model(void);
    /*! 
    Number of customers in this load, defaults to one.
    */
    DSS_CAPI_DLL int32_t Loads_Get_NumCust(void);
    /*! 
    Average percent of nominal load in Monte Carlo studies; only if no loadshape defined for this load.
    */
    DSS_CAPI_DLL double Loads_Get_PctMean(void);
    /*! 
    Percent standard deviation for Monte Carlo load studies; if there is no loadshape assigned to this load.
    */
    DSS_CAPI_DLL double Loads_Get_PctStdDev(void);
    /*! 
    Neutral resistance for wye-connected loads.
    */
    DSS_CAPI_DLL double Loads_Get_Rneut(void);
    /*! 
    Name of harmonic current spectrum shape.
    */
    DSS_CAPI_DLL const char* Loads_Get_Spectrum(void);
    /*! 
    Response to load multipliers: Fixed (growth only), Exempt (no LD curve), Variable (all).
    */
    DSS_CAPI_DLL int32_t Loads_Get_Status(void);
    /*! 
    Maximum per-unit voltage to use the load model. Above this, constant Z applies.
    */
    DSS_CAPI_DLL double Loads_Get_Vmaxpu(void);
    /*! 
    Minimum voltage for unserved energy (UE) evaluation.
    */
    DSS_CAPI_DLL double Loads_Get_Vminemerg(void);
    /*! 
    Minimum voltage for energy exceeding normal (EEN) evaluations.
    */
    DSS_CAPI_DLL double Loads_Get_Vminnorm(void);
    /*! 
    Minimum voltage to apply the load model. Below this, constant Z is used.
    */
    DSS_CAPI_DLL double Loads_Get_Vminpu(void);
    /*! 
    Rated service transformer kVA for load allocation, using AllocationFactor. Affects kW, kvar, and pf.
    */
    DSS_CAPI_DLL double Loads_Get_xfkVA(void);
    /*! 
    Neutral reactance for wye-connected loads.
    */
    DSS_CAPI_DLL double Loads_Get_Xneut(void);
    /*! 
    Name of yearly duration loadshape
    */
    DSS_CAPI_DLL const char* Loads_Get_Yearly(void);
    DSS_CAPI_DLL void Loads_Set_AllocationFactor(double Value);
    DSS_CAPI_DLL void Loads_Set_Cfactor(double Value);
    DSS_CAPI_DLL void Loads_Set_Class_(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_CVRcurve(const char* Value);
    DSS_CAPI_DLL void Loads_Set_CVRvars(double Value);
    DSS_CAPI_DLL void Loads_Set_CVRwatts(double Value);
    DSS_CAPI_DLL void Loads_Set_daily(const char* Value);
    DSS_CAPI_DLL void Loads_Set_duty(const char* Value);
    DSS_CAPI_DLL void Loads_Set_Growth(const char* Value);
    DSS_CAPI_DLL void Loads_Set_IsDelta(uint16_t Value);
    DSS_CAPI_DLL void Loads_Set_kva(double Value);
    DSS_CAPI_DLL void Loads_Set_kwh(double Value);
    DSS_CAPI_DLL void Loads_Set_kwhdays(double Value);
    DSS_CAPI_DLL void Loads_Set_Model(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_NumCust(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_PctMean(double Value);
    DSS_CAPI_DLL void Loads_Set_PctStdDev(double Value);
    DSS_CAPI_DLL void Loads_Set_Rneut(double Value);
    DSS_CAPI_DLL void Loads_Set_Spectrum(const char* Value);
    DSS_CAPI_DLL void Loads_Set_Status(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_Vmaxpu(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminemerg(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminnorm(double Value);
    DSS_CAPI_DLL void Loads_Set_Vminpu(double Value);
    DSS_CAPI_DLL void Loads_Set_xfkVA(double Value);
    DSS_CAPI_DLL void Loads_Set_Xneut(double Value);
    DSS_CAPI_DLL void Loads_Set_Yearly(const char* Value);
    /*! 
    Array of 7 doubles with values for ZIPV property of the LOAD object
    */
    DSS_CAPI_DLL void Loads_Get_ZIPV(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void Loads_Set_ZIPV(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL double Loads_Get_pctSeriesRL(void);
    /*! 
    Percent of Load that is modeled as series R-L for harmonics studies
    */
    DSS_CAPI_DLL void Loads_Set_pctSeriesRL(double Value);
    /*! 
    Relative Weighting factor for the active LOAD
    */
    DSS_CAPI_DLL double Loads_Get_RelWeight(void);
    /*! 
    Relative Weighting factor for the active LOAD
    */
    DSS_CAPI_DLL void Loads_Set_RelWeight(double Value);