src/v7/CAPI_Loads.pas

UNIT CAPI_Loads;
{$inline on}

INTERFACE

USES CAPI_Utils;

PROCEDURE Loads_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
function Loads_Get_First():Integer;cdecl;
function Loads_Get_idx():Integer;cdecl;
function Loads_Get_Name():PAnsiChar;cdecl;
function Loads_Get_Next():Integer;cdecl;
procedure Loads_Set_idx(Value: Integer);cdecl;
procedure Loads_Set_Name(const Value: PAnsiChar);cdecl;
function Loads_Get_kV():Double;cdecl;
function Loads_Get_kvar():Double;cdecl;
function Loads_Get_kW():Double;cdecl;
function Loads_Get_PF():Double;cdecl;
procedure Loads_Set_kV(Value: Double);cdecl;
procedure Loads_Set_kvar(Value: Double);cdecl;
procedure Loads_Set_kW(Value: Double);cdecl;
procedure Loads_Set_PF(Value: Double);cdecl;
function Loads_Get_Count():Integer;cdecl;
function Loads_Get_AllocationFactor():Double;cdecl;
function Loads_Get_Cfactor():Double;cdecl;
function Loads_Get_Class_():Integer;cdecl;
function Loads_Get_CVRcurve():PAnsiChar;cdecl;
function Loads_Get_CVRvars():Double;cdecl;
function Loads_Get_CVRwatts():Double;cdecl;
function Loads_Get_daily():PAnsiChar;cdecl;
function Loads_Get_duty():PAnsiChar;cdecl;
function Loads_Get_Growth():PAnsiChar;cdecl;
function Loads_Get_IsDelta():WordBool;cdecl;
function Loads_Get_kva():Double;cdecl;
function Loads_Get_kwh():Double;cdecl;
function Loads_Get_kwhdays():Double;cdecl;
function Loads_Get_Model():Integer;cdecl;
function Loads_Get_NumCust():Integer;cdecl;
function Loads_Get_PctMean():Double;cdecl;
function Loads_Get_PctStdDev():Double;cdecl;
function Loads_Get_Rneut():Double;cdecl;
function Loads_Get_Spectrum():PAnsiChar;cdecl;
function Loads_Get_Status():Integer;cdecl;
function Loads_Get_Vmaxpu():Double;cdecl;
function Loads_Get_Vminemerg():Double;cdecl;
function Loads_Get_Vminnorm():Double;cdecl;
function Loads_Get_Vminpu():Double;cdecl;
function Loads_Get_xfkVA():Double;cdecl;
function Loads_Get_Xneut():Double;cdecl;
function Loads_Get_Yearly():PAnsiChar;cdecl;
procedure Loads_Set_AllocationFactor(Value: Double);cdecl;
procedure Loads_Set_Cfactor(Value: Double);cdecl;
procedure Loads_Set_Class_(Value: Integer);cdecl;
procedure Loads_Set_CVRcurve(const Value: PAnsiChar);cdecl;
procedure Loads_Set_CVRvars(Value: Double);cdecl;
procedure Loads_Set_CVRwatts(Value: Double);cdecl;
procedure Loads_Set_daily(const Value: PAnsiChar);cdecl;
procedure Loads_Set_duty(const Value: PAnsiChar);cdecl;
procedure Loads_Set_Growth(const Value: PAnsiChar);cdecl;
procedure Loads_Set_IsDelta(Value: WordBool);cdecl;
procedure Loads_Set_kva(Value: Double);cdecl;
procedure Loads_Set_kwh(Value: Double);cdecl;
procedure Loads_Set_kwhdays(Value: Double);cdecl;
procedure Loads_Set_Model(Value: Integer);cdecl;
procedure Loads_Set_NumCust(Value: Integer);cdecl;
procedure Loads_Set_PctMean(Value: Double);cdecl;
procedure Loads_Set_PctStdDev(Value: Double);cdecl;
procedure Loads_Set_Rneut(Value: Double);cdecl;
procedure Loads_Set_Spectrum(const Value: PAnsiChar);cdecl;
procedure Loads_Set_Status(Value: Integer);cdecl;
procedure Loads_Set_Vmaxpu(Value: Double);cdecl;
procedure Loads_Set_Vminemerg(Value: Double);cdecl;
procedure Loads_Set_Vminnorm(Value: Double);cdecl;
procedure Loads_Set_Vminpu(Value: Double);cdecl;
procedure Loads_Set_xfkVA(Value: Double);cdecl;
procedure Loads_Set_Xneut(Value: Double);cdecl;
procedure Loads_Set_Yearly(const Value: PAnsiChar);cdecl;
PROCEDURE Loads_Get_ZIPV(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
procedure Loads_Set_ZIPV(ValuePtr: PDouble; ValueCount: Integer);cdecl;
function Loads_Get_pctSeriesRL():Double;cdecl;
procedure Loads_Set_pctSeriesRL(Value: Double);cdecl;
function Loads_Get_RelWeight():Double;cdecl;
procedure Loads_Set_RelWeight(Value: Double);cdecl;

IMPLEMENTATION

USES CAPI_Constants, DSSGlobals, Executive, Load, SysUtils, math;

function ActiveLoad: TLoadObj;
begin
  Result := nil;
  if ActiveCircuit <> Nil then Result := ActiveCircuit.Loads.Active;
end;
//------------------------------------------------------------------------------
procedure Set_Parameter(const parm: string; const val: string);
var
  cmd: string;
begin
  if not Assigned (ActiveCircuit) then exit;
  SolutionAbort := FALSE;  // Reset for commands entered from outside
  cmd := Format ('load.%s.%s=%s', [ActiveLoad.Name, parm, val]);
  DSSExecutive.Command := cmd;
end;
//------------------------------------------------------------------------------
PROCEDURE Loads_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
VAR
  Result: PPAnsiCharArray;
  LoadElem:TLoadObj;
  k:Integer;

Begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    IF ActiveCircuit <> Nil THEN
     WITH ActiveCircuit DO
     If Loads.ListSize > 0 Then
     Begin
       DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (Loads.ListSize-1) + 1);
       k:=0;
       LoadElem := Loads.First;
       WHILE LoadElem<>Nil DO  Begin
          Result[k] := DSS_CopyStringAsPChar(LoadElem.Name);
          Inc(k);
          LoadElem := Loads.Next;
       End;
     End ;
end;
//------------------------------------------------------------------------------
function Loads_Get_First():Integer;cdecl;
Var
   pLoad:TLoadObj;

Begin

   Result := 0;
   If ActiveCircuit <> Nil Then
   Begin
        pLoad := ActiveCircuit.Loads.First;
        If pLoad <> Nil Then
        Begin
          Repeat
            If pLoad.Enabled
            Then Begin
              ActiveCircuit.ActiveCktElement := pLoad;
              Result := 1;
            End
            Else pLoad := ActiveCircuit.Loads.Next;
          Until (Result = 1) or (pLoad = nil);
        End
        Else
            Result := 0;  // signify no more
   End;

end;
//------------------------------------------------------------------------------
function Loads_Get_idx():Integer;cdecl;
begin
    if ActiveCircuit <> Nil then
       Result := ActiveCircuit.Loads.ActiveIndex
    else Result := 0;
end;
//------------------------------------------------------------------------------
function Loads_Get_Name_AnsiString():AnsiString;inline;
Var
   pLoad:TLoadObj;

Begin
   Result := '';
   If ActiveCircuit <> Nil Then
   Begin
        pLoad := ActiveCircuit.Loads.Active;
        If pLoad <> Nil Then
          Result := pLoad.Name
        Else
            Result := '';  // signify no name
   End;

end;

function Loads_Get_Name():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Loads_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function Loads_Get_Next():Integer;cdecl;
Var
   pLoad:TLoadObj;

Begin
   Result := 0;
   If ActiveCircuit <> Nil Then
   Begin
        pLoad := ActiveCircuit.Loads.Next;
        If pLoad <> Nil Then
        Begin
          Repeat
            If pLoad.Enabled
            Then Begin
              ActiveCircuit.ActiveCktElement := pLoad;
              Result := ActiveCircuit.Loads.ActiveIndex;
            End
            Else pLoad := ActiveCircuit.Loads.Next;
          Until (Result > 0) or (pLoad = nil);
        End
        Else
            Result := 0;  // signify no more
   End;

end;
//------------------------------------------------------------------------------
procedure Loads_Set_idx(Value: Integer);cdecl;
Var
    pLoad:TLoadObj;
begin
    if ActiveCircuit <> Nil then   Begin
        pLoad := ActiveCircuit.Loads.Get(Value);
        If pLoad <> Nil Then ActiveCircuit.ActiveCktElement := pLoad;
    End;
end;
//------------------------------------------------------------------------------
procedure Loads_Set_Name(const Value: PAnsiChar);cdecl;
VAR
    ActiveSave :integer;
    pLoad:TLoadObj;
    S: String;
    Found :Boolean;
Begin

  IF ActiveCircuit <> NIL
  THEN Begin      // Search list of Loads in active circuit for name
     WITH ActiveCircuit.Loads DO
       Begin
           S := Value;  // Convert to Pascal String
           Found := FALSE;
           ActiveSave := ActiveIndex;
           pLoad := First;
           While pLoad <> NIL Do
           Begin
              IF (CompareText(pLoad.Name, S) = 0)
              THEN Begin
                  ActiveCircuit.ActiveCktElement := pLoad;
                  Found := TRUE;
                  Break;
              End;
              pLoad := Next;
           End;
           IF NOT Found
           THEN Begin
               DoSimpleMsg('Load "' + S + '" Not Found in Active Circuit.', 5003);
               pLoad := Get(ActiveSave);    // Restore active Load
               ActiveCircuit.ActiveCktElement := pLoad;
           End;
       End;
  End;

end;
//------------------------------------------------------------------------------
function Loads_Get_kV():Double;cdecl;
begin
   Result := 0.0;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Loads Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TLoadObj(Active).kVLoadBase;
             End;
         End;
   End;
